# Meno-Core

./: .gitignore  .pre-commit-config.yml  README.md  backend_api.py  config.py  example.env  full_abbreviations_updated.json  link_correcter.py  link_searcher.py  pyproject.toml  rag_engine.py  reference_searcher.py  requirements.txt  run_backend.sh
.github/workflows/: ci.yml  lint.yml
logdb/: backend_dto.py  db_tables_creation.py  log_collector.py  log_handler.py  log_proccessor.py  message.py  model_dto.py  session_dto.py  user_dto.py
logdb/db_models/: db_models.py
resources/: full_abbreviations_updated.json  validated_urls.json
scripts/: build_chunk_rag_corpus.py  init_chunk_rag.py  run_backend.sh
src/meno_core/api/: arena.py  main.py  pipeline_stages.py
src/meno_core/config/: settings.py
src/meno_core/core/: gte_embedding.py  lexical_normalizer.py  lightrag_engine.py  lightrag_timing.py  link_correcter.py  link_searcher.py  prompts.py  rag_engine.py  rag_runtime.py  vllm_registry.py  zvec_rag.py
src/meno_core/core/rag/: config.py  debug_utils.py  embeddings.py  factory.py  llm_client.py  mode_protocol.py  model_registry.py  models.py  prompts.py  query_processor.py  stage_event.py
src/meno_core/core/rag/fusion/: merger.py
src/meno_core/core/rag/generation/: context_assembler.py  generator.py
src/meno_core/core/rag/ingestion/: chunker.py  indexer.py  (+2 more)
src/meno_core/infrastructure/logdb/: backend_dto.py  db_tables_creation.py  log_collector.py  message.py
tests/: test_chunk_rag_corpus_builder.py  test_chunk_rag_embeddings.py  test_chunk_rag_fusion.py  test_chunk_rag_orchestrator.py  test_chunk_rag_qwen_reranker.py  test_chunk_rag_retrieval_guards.py  test_chunk_rag_source_loader.py  test_legacy_lightrag_timing.py  test_lexical_normalizer.py  test_rag_runtime.py
(+8 files in other folders)
