[project]
name = "meno-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "apscheduler>=3.11.0",
    "fastapi>=0.115.12",
    "future>=1.0.0",
    "graspologic>=3.4.1",
    "lightrag-hku>=1.4.7",
    "nano-vectordb>=0.0.4.3",
    "nltk>=3.9.1",
    "openai>=1.82.0",
    "pipmaster>=0.7.2",
    "pydantic-settings>=2.9.1",
    "sentence-transformers>=4.1.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "transformers>=4.52.3",
    "uvicorn>=0.34.2",
    "rapidfuzz>=3.13.0"
]
